--- a/OPTmotors/Project.toml
+++ b/OPTmotors/Project.toml
@@ -3,6 +3,7 @@ BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
