--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
+DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
