--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # data misc
 
-misc/mantleConvectionReader/data/*
-
+OPTmotors/misc/mantleConvectionReader/data/*
+#OPTmotors/myBenchmarks
 OPTmotors/myOwnApplicationLocal
 data/*
 data_back
