--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SparseDiffTools = "47a9eef4-7e08-11e9-0b38-333d64bd3804"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
