--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,6 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
-Express = "b12df14e-adf7-11e9-0606-d5813a258349"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
@@ -18,6 +17,7 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SparseDiffTools = "47a9eef4-7e08-11e9-0b38-333d64bd3804"
+StatGeochem = "df4de05a-b714-11e8-3c2a-c30fb13e804c"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
