--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # data misc
 
 OPTmotors/misc/mantleConvectionReader/data/*
-OPTmotors/myBenchmarks/*jdl2
+OPTmotors/myBenchmarks/*jld2
 OPTmotors/myOwnApplicationLocal
 
 data/*
