--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ OPTmotors/misc/mantleConvectionReader/data/*
 OPTmotors/myBenchmarks/*jld2
 OPTmotors/myOwnApplicationLocal
 OPTmotors/myOwnApplicationsEstelle/*_local.jl
+OPTmotors/myOwnApplication/statprof
 *_local
 data/*
 data_back
