--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ DIVAnd = "efc8151c-67de-5a8f-9a35-d8f54746ae9d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
