--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,13 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
+ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
+ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
