--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,8 @@ DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GMT = "5752ebe1-31b9-557e-87aa-f909b540aa54"
+GMT_jll = "b68b8c3f-ed99-5bef-9675-4739d9426b26"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 GridLayoutBase = "3955a311-db13-416c-9275-1d80ed98e5e9"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
