--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
 BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DIVAnd = "efc8151c-67de-5a8f-9a35-d8f54746ae9d"
@@ -10,21 +11,23 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GMT = "5752ebe1-31b9-557e-87aa-f909b540aa54"
 GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
 Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 IfElse = "615f187c-cbe4-4ef1-ba3b-2fcf58d6d173"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatGeochem = "df4de05a-b714-11e8-3c2a-c30fb13e804c"
 StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
